--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "private": true,
   "scripts": {
     "dev": "nuxi dev",
-    "build": "nuxi build",
+    "build": "nuxt build",
+    "clean": "rm -rf .output node_modules package-lock.json && npm install",
+    "postinstall": "nuxt prepare",
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "nuxt3": "latest",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
+    "autoprefixer": "^10.4.17",
+    "nuxt": "^3.10.1",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
