--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "private": true,
+  "name": "advanced-homes",
+  "author": {
+    "name": "Behon Baker",
+    "email": "behon.baker@yahoo.com",
+    "url": "https://behonbaker.com"
+  },
+  "keywords": [
+    "nuxt3",
+    "tailwindcss"
+  ],
+  "private": false,
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxt build",
