--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "autoprefixer": "^10.4.20",
     "nuxt": "^3.14.159",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.15"
+  },
+  "dependencies": {
+    "vue": "latest",
+    "vue-router": "latest"
   }
 }
